[add]削除機能＆CSS修正

--- a/public/about.html
+++ b/public/about.html
@@ -1,13 +1,20 @@
 <html>
     <head>
         <meta charset="UTF-8"></meta>
+        <title>連絡帳</title>
+        <link rel="stylesheet" href="/style.css"></link>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
     <body>
-        <h1>ABOUT</h1>
-        <p>sinatraのwebサービスです</p>
-        <div>
-            <a href="/contact_new"></a>
-            <a href="/">もどる</a>
-        </div>
+        <header id="header">
+            <h1 class="title">連絡帳</h1>
+        </header>
+        <main class="container">
+            <h1 class="subTitle about__subTitle">ABOUT</h1>
+            <p>sinatraのwebサービスです</p>
+            <div><a href="/contact_new">新規連絡先追加へ</a></div>
+            <div><a href="/">もどる</a></div>
+        </main>
     </body>
 </html>
